取り敢えず

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,8 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_4179:0 "今治"
+ VICTORY_POINTS_1117:0 "新潟"
  VICTORY_POINTS_6822:0 "清津"
  VICTORY_POINTS_10110:0 "木浦"
  VICTORY_POINTS_10083:0 "元山"
