--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -954,6 +954,14 @@
  
 ###################
 #アジア
+ ALP:0 "アレッポ"
+ ALP_DEF:0 "アレッポ"
+ ALP_ADJ:0 "アレッポ"
+ 
+ ALW:0 "アラウイ"
+ ALW_DEF:0 "アラウイ"
+ ALW_ADJ:0 "アラウイ"
+ 
  ANH:0 "安徽"
  ANH_DEF:0 "安徽"
  ANH_ADJ:0 "安徽"
@@ -981,6 +989,10 @@
  CCS:0 "コーカサス"
  CCS_DEF:0 "コーカサス"
  CCS_ADJ:0 "コーカサス"
+ 
+ DAM:0 "ダマスカス"
+ DAM_DEF:0 "ダマスカス"
+ DAM_ADJ:0 "ダマスカス"
  
  DLI:0 "大連"
  DLI_DEF:0 "大連"
@@ -1014,6 +1026,10 @@
  GZH_DEF:0 "貴州"
  GZH_ADJ:0 "貴州"
  
+ HAT:0 "ハタイ"
+ HAT_DEF:0 "ハタイ"
+ HAT_ADJ:0 "ハタイ"
+ 
  HEB:0 "河北"
  HEB_DEF:0 "河北"
  HEB_ADJ:0 "河北"
@@ -1045,6 +1061,10 @@
  INC:0 "インドシナ"
  INC_DEF:0 "インドシナ"
  INC_ADJ:0 "インドシナ"
+ 
+ JAD:0 "ジャバル・ドゥルーズ"
+ JAD_DEF:0 "ジャバル・ドゥルーズ"
+ JAD_ADJ:0 "ジャバル・ドゥルーズ"
  
  JIA:0 "江西"
  JIA_DEF:0 "江西"
