--- a/localisation/english/countries_long_l_english.yml
+++ b/localisation/english/countries_long_l_english.yml
@@ -1341,6 +1341,16 @@
  
 ##GEACPS
 #アジア
+ ALP_republic:0 "アレッポ共和国"
+ ALP_republic_DEF:0 "アレッポ共和国"
+ ALP_state:0 "アレッポ国"
+ ALP_state_DEF:0 "アレッポ国"
+ 
+ ALW_republic:0 "アラウイ共和国"
+ ALW_republic_DEF:0 "アラウイ共和国"
+ ALW_state:0 "アラウイ国"
+ ALW_state_DEF:0 "アラウイ国"
+ 
  ANH_minguo:0 "安徽民国"
  ANH_minguo_DEF:0 "安徽民国"
  ANH_republic:0 "安徽共和国"
@@ -1364,11 +1374,18 @@
  BNG_kingdom:0 "バンガナパッレ王国"
  BNG_kingdom_DEF:0 "バンガナパッレ王国"
  
+ BRN_empire:0 "ブルネイ帝国"
+ BRN_empire_DEF:0 "ブルネイ帝国"
  BRN_peace_abode_nation:0 "平和の地ブルネイ国"
  BRN_peace_abode_nation_DEF:0 "平和の地ブルネイ国"
+ BRN_sultanate:0 "ブルネイ・スルタン国"
+ BRN_sultanate_DEF:0 "ブルネイ・スルタン国"
  
  CCS_republic:0 "コーカサス共和国"
  CCS_republic_DEF:0 "コーカサス共和国"
+ 
+ DAM:0 "ダマスカス"
+ DAM_DEF:0 "ダマスカス"
  
  DLI_minguo:0 "大連民国"
  DLI_minguo_DEF:0 "大連民国"
@@ -1430,6 +1447,11 @@
  GZH_warlord:0 "貴州軍閥"
  GZH_warlord_DEF:0 "貴州軍閥"
  
+ HAT_republic:0 "ハタイ共和国"
+ HAT_republic_DEF:0 "ハタイ共和国"
+ HAT_state:0 "ハタイ国"
+ HAT_state_DEF:0 "ハタイ国"
+ 
  HEB_minguo:0 "河北民国"
  HEB_minguo_DEF:0 "河北民国"
  HEB_republic:0 "河北共和国"
@@ -1489,6 +1511,11 @@
  
  INC_union:0 "インドシナ連合"
  INC_union_DEF:0 "インドシナ連合"
+ 
+ JAD_republic:0 "ジャバル・ドゥルーズ共和国"
+ JAD_republic_DEF:0 "ジャバル・ドゥルーズ共和国"
+ JAD_state:0 "ジャバル・ドゥルーズ国"
+ JAD_state_DEF:0 "ジャバル・ドゥルーズ国"
  
  JGS_minguo:0 "江蘇民国"
  JGS_minguo_DEF:0 "江蘇民国"
