--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -1267,3 +1267,13 @@
  STATE_1268:0 "ロサンゼルス"
  STATE_1269:0 "アラウイ"
  STATE_1270:0 "ジャバル・ドゥルーズ"
+ STATE_1271:0 "アチェ"
+ STATE_1272:0 "北スマトラ"
+ STATE_1273:0 "西スマトラ"
+ STATE_1274:0 "リアウ"
+ STATE_1275:0 "リアウ諸島"
+ STATE_1276:0 "ジャンビ"
+ STATE_1277:0 "ブンクル"
+ STATE_1278:0 "南スマトラ"
+ STATE_1279:0 "バンカ・ブリトゥン"
+ STATE_1280:0 "ランプン"
