インドネシア改

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -332,8 +332,8 @@
  STATE_331:0 "ニューファンドランド"
  STATE_332:0 "ラブラドール"
  STATE_333:0 "サラワク"
- STATE_334:0 "カリマンタン"
- STATE_335:0 "ジャワ"
+ STATE_334:0 "中部カリマンタン"
+ STATE_335:0 "ジャカルタ"
  STATE_336:0 "クランタン"
  STATE_337:0 "フェロー諸島"
  STATE_338:0 "グロスタシャー"
@@ -521,7 +521,7 @@
  STATE_520:0 "ノーザンテリトリー"
  STATE_521:0 "クイーンズランド"
  STATE_522:0 "オーストラリア西部"
- STATE_523:0 "パプア"
+ STATE_523:0 "東ニューギニア"
  STATE_524:0 "台北"
  STATE_525:0 "京城"
  STATE_526:0 "沖縄諸島"
@@ -665,13 +665,13 @@
  STATE_664:0 "スロヴァキア南部"
  STATE_665:0 "ガベス"
  STATE_666:0 "ラップランド"
- STATE_667:0 "小スンダ列島"
- STATE_668:0 "モルッカ諸島"
- STATE_669:0 "西パプア"
+ STATE_667:0 "バリ"
+ STATE_668:0 "北マルク"
+ STATE_669:0 "西イリアンジャヤ"
  STATE_670:0 "ラオス"
  STATE_671:0 "北中部"
- STATE_672:0 "スマトラ"
- STATE_673:0 "スラウェシ"
+ STATE_672:0 "北スマトラ"
+ STATE_673:0 "中部スラウェシ"
  STATE_674:0 "中央オーストラリア"
  STATE_675:0 "アル・ハジャラ"
  STATE_676:0 "モースル"
@@ -736,7 +736,7 @@
  STATE_735:0 "サヴォワ"
  STATE_736:0 "イストリア"
  STATE_737:0 "ビスマルク"
- STATE_738:0 "アルー諸島"
+ STATE_738:0 "マルク"
  STATE_739:0 "ハイダグアイ"
  STATE_740:0 "バンクーバー島"
  STATE_741:0 "カンボジア西部"
@@ -912,7 +912,7 @@
  STATE_911:0 "南カチン"
  STATE_912:0 "ラカイン"
  STATE_913:0 "ヤンゴン"
- STATE_914:0 "リアウ諸島"
+ STATE_914:0 "北東州"
  STATE_915:0 "オホーツク"
  STATE_916:0 "スンタル"
  STATE_917:0 "ツルハンスク"
@@ -1268,7 +1268,7 @@
  STATE_1269:0 "アラウイ"
  STATE_1270:0 "ジャバル・ドゥルーズ"
  STATE_1271:0 "アチェ"
- STATE_1272:0 "北スマトラ"
+ STATE_1272:0 "ソマリ"
  STATE_1273:0 "西スマトラ"
  STATE_1274:0 "リアウ"
  STATE_1275:0 "リアウ諸島"
@@ -1277,3 +1277,20 @@
  STATE_1278:0 "南スマトラ"
  STATE_1279:0 "バンカ・ブリトゥン"
  STATE_1280:0 "ランプン"
+ STATE_1281:0 "バンテン"
+ STATE_1282:0 "西ジャワ"
+ STATE_1283:0 "中部ジャワ"
+ STATE_1284:0 "ジョグジャカルタ"
+ STATE_1285:0 "東ジャワ"
+ STATE_1286:0 "西ヌサ・トゥンガラ"
+ STATE_1287:0 "東ヌサ・トゥンガラ"
+ STATE_1288:0 "西カリマンタン"
+ STATE_1289:0 "南カリマンタン"
+ STATE_1290:0 "東カリマンタン"
+ STATE_1291:0 "北カリマンタン"
+ STATE_1292:0 "北スラウェシ"
+ STATE_1293:0 "ゴロンタロ"
+ STATE_1294:0 "南東スラウェシ"
+ STATE_1295:0 "南スラウェシ"
+ STATE_1296:0 "西スラウェシ"
+ STATE_1297:0 "イリアンジャヤ"
