スマトラ横断鉄道...?

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,8 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_10382:0 "デ・コック砦"
+ VICTORY_POINTS_10209:0 "ペカンバル"
  VICTORY_POINTS_4179:0 "今治"
  VICTORY_POINTS_1117:0 "新潟"
  VICTORY_POINTS_6822:0 "清津"
