恐らく今年最後の納め

--- a/localisation/english/geacps_JAP_l_english.yml
+++ b/localisation/english/geacps_JAP_l_english.yml
@@ -254,17 +254,31 @@
  geacps_JAP.3.b:0 ""欠点がない"重光葵に"
  geacps_JAP.4.t:0 "重臣会議"
  geacps_JAP.4.d:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一、大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎、海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
- geacps_JAP.4.a:0 "陸軍の奏薦を"
- geacps_JAP.4.b:0 "海軍の奏薦を"
+ geacps_JAP.4.a:0 "奏薦されたのは陸軍将校だ！"
+ geacps_JAP.4.b:0 "いいや、海軍士官が奏薦された！"
  geacps_JAP.4.c:0 "軍部の意見なんぞ無視してしまえ..."
  geacps_JAP.5.t:0 "閣議"
  geacps_JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が行われた。\n内務大臣の安藤紀三郎は戒嚴令の施行を主張したが、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的に速やかな鎮圧を望んでいる昭和天皇の意向を受け、戒嚴令の施行は決定された。"
  geacps_JAP.5.a:0 "決まりだな"
+ geacps_JAP.6.t:0 "海軍士官の裁判"
+ geacps_JAP.6.d:0 "D"
+ geacps_JAP.6.a:0 "公正な判決を下す"
+ geacps_JAP.6.b:0 "臣民が助命嘆願運動を行っている..."
+ geacps_JAP.7.t:0 "農本主義者を逮捕"
+ geacps_JAP.7.d:0 "D"
+ geacps_JAP.7.a:0 "全国の農本主義者達の思想を"保護観察"しよう"
+ geacps_JAP.7.b:0 "投獄でもしておけ"
+ geacps_JAP.8.t:0 "皇道派将校の裁判"
+ geacps_JAP.8.d:0 "D"
+ geacps_JAP.8.a:0 "公正な判決なんてもんはない"
+ geacps_JAP.8.b:0 "もしかしたら..."
+ 
  geacps_JAP.100.t:0 "日本内戦の予感"
  geacps_JAP.100.d:0 "A"
  geacps_JAP.100.a:0 "A"
  geacps_JAP.100.b:0 "B"
  geacps_JAP.100.c:0 "C"
+ 
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
  geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
  geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
