--- a/localisation/english/_geacps_bookmarks_l_english.yml
+++ b/localisation/english/_geacps_bookmarks_l_english.yml
@@ -1,10 +1,10 @@
 ﻿l_english:
 #シナリオ
  THE_GORIOUS_FAR_EAST_EMPIRE_NAME:0 "栄光ある極東の帝国"
- THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "我が国は大東亜戦争において連合国を撃破し、大東亜新秩序を築いた。\n太陽の沈まぬ国となった我が国だが、問題が山積しているのも確かである。\n政党政治への不信や軍部の台頭、終わらぬ支那事変、植民地での独立運動、失われた極東を取り戻すべく肥大化する赤き帝国、密かに報復を狙う自由の帝国...\n\n\n果たして我が国の未来は繁栄か没落か。"
+ THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "昭和16年、太平洋において我が国は米國と戦闘状態に入る。この聖戦に勝ち抜いた我が国は、八紘一宇・東亜新秩序の下に大東亞共榮圈を建設した。\n太陽の沈まぬ国となった我が国であったが、問題が山積しているのも確かである。\n政党政治への不信や軍部の台頭、未だ終わらぬ支那事変、植民地での独立運動、そして、未回収の極東を取り戻すべく肥大化する赤き帝国と密かに報復を狙う自由の帝国...\n\n果たして我が国の未来は繁栄か没落か"
  
  THE_CHAOS_OF_EUROPE_NAME:0 "混沌に包まれし欧州"
- THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n先の大戦では肥大化したドイツとイタリア、及びそれらの同盟国の崩壊に成功した。しかし、戦勝国の独自路線が仇となり、戦後の新秩序を保つ事には失敗した。後に「冷戦」と呼ばれるこの構造は、イギリスとフランス、ロシアの間に暗い影を落としている。以前の支配者は、大きく三つに分断され、その最大の同盟国は、南部が支配から脱した。\nバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では、イギリスとフランスの海峡を超えた対立が激化しようとしていたのだった..."
+ THE_CHAOS_OF_EUROPE_DESC:0 "欧州は混沌に包まれている...\n\n先の大戦で肥大化したドイツとイタリア、及びそれらの同盟国の撃破に成功した。しかし、各戦勝国の独自路線が仇となり、戦後の新秩序の建設には失敗してしまった。後に「冷戦」と呼ばれることとなるこの構造は、イギリスとフランス、そして赤き帝国との間に暗い影を落とし続けている。以前の支配者は大きく三つに分断され、その最大の同盟国は南部が支配から脱した。\n今やバルト海のシュチェチンからアドリア海のトリエステの間で欧州は二分され、さらに一方では海峡を超えた対立が激化しようとしているのであった..."
  
 #各国の説明
  GBR_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "イギリスは辛うじて勝利を収めたものの、問題が山積しているのも事実である。隣国との関係悪化や鉄のカーテンを隔てた向こう側との関係、脱植民地化の加速等の問題に対して、クレメント・アトリー率いる労働党はどう対処するのだろうか...？"
