与党を総督府に

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -500,16 +500,16 @@
  VICTORY_POINTS_12806:0 "ハルツーム"
  VICTORY_POINTS_1269:0 "ガダルカナル"
  VICTORY_POINTS_3995:0 "サイパン"
- VICTORY_POINTS_4180:0 "ホノルル"
+ VICTORY_POINTS_4180:0 "花瑠瑠"
  VICTORY_POINTS_4226:0 "ブイン"
  VICTORY_POINTS_4268:0 "ヌメア"
  VICTORY_POINTS_4329:0 "ポートモレスビー"
  VICTORY_POINTS_2489:0 "トラック"
- VICTORY_POINTS_4357:0 "北パラオ"
+ VICTORY_POINTS_4357:0 "コロール"
  VICTORY_POINTS_7251:0 "ラバウル"
  VICTORY_POINTS_7290:0 "アピア"
  VICTORY_POINTS_7302:0 "スバ"
- VICTORY_POINTS_12021:0 "ヒロ"
+ VICTORY_POINTS_12021:0 "比呂"
  VICTORY_POINTS_12120:0 "ポートビラ"
  VICTORY_POINTS_12140:1 "ハガニア"
  VICTORY_POINTS_12148:0 "パペーテ"
