--- a/localisation/replace/_geacps_strategic_region_names_l_english.yml
+++ b/localisation/replace/_geacps_strategic_region_names_l_english.yml
@@ -13,3 +13,6 @@
  
  STRATEGICREGION_38:0 "ポーランド北西部"
  STRATEGICREGION_39:0 "ポーランド南東部"
+ 
+ STRATEGICREGION_75:0 "南支那海"
+ STRATEGICREGION_76:0 "東支那海"
