日英仏のキャラクター化及び政党関連

--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -3,6 +3,17 @@
  PARTY_illegal_party:0 "§R非合法政党§!"
  PARTY_illegal_party_long:0 "§R非合法政党§!"
  
+ PARTY_conservative_party:0 "保守党"
+ PARTY_conservative_party_long:0 "保守党"
+ PARTY_independent_politician:0 "無所属"
+ PARTY_independent_politician_long:0 "無所属"
+ PARTY_labour_party:0 "労働党"
+ PARTY_labour_party_long:0 "労働党"
+ PARTY_liberal_party:0 "自由党"
+ PARTY_liberal_party_long:0 "自由党"
+ PARTY_provisional_government:0 "臨時政府"
+ PARTY_provisional_government_long:0 "臨時政府"
+ 
 ##アジア
 #DLI-大連
  PARTY_kwantung_asian_development_service_league:0 "興亜奉公連盟"
@@ -25,6 +36,26 @@
  PARTY_choson_government-general_long:0 "朝鮮総督府"
  PARTY_national_mobilization_choson_league:0 "国民総力朝鮮連盟"
  PARTY_national_mobilization_choson_league_long:0 "国民総力朝鮮連盟"
+ 
+##ヨーロッパ
+#FRA-フランス
+ PARTY_french_communist_party:0 "共産党"
+ PARTY_french_communist_party_long:0 "フランス共産党"
+ PARTY_popular_republican_movement:0 "大衆共和運動"
+ PARTY_popular_republican_movement_long:0 "大衆共和運動"
+ PARTY_radical-socialist_and_radical_republican_party:0 "急進党"
+ PARTY_radical-socialist_and_radical_republican_party_long:0 "急進社会主義及び急進共和主義党"
+ PARTY_liberty_republican_party:0 "自由共和党"
+ PARTY_liberty_republican_party_long:0 "自由共和党"
+ PARTY_workers_international_french_section:0 "社会党"
+ PARTY_workers_international_french_section_long:0 "労働インターナショナル・フランス支部"
+ 
+#GBR-グレートブリテン
+ PARTY_common_wealth_party:0 "連邦党"
+ PARTY_common_wealth_party_long:0 "連邦党"
+ PARTY_great_britain_communist_party:0 "共産党"
+ PARTY_great_britain_communist_party_long:0 "グレートブリテン共産党"
+ 
  
 ##大洋州
 #FSM-ミクロネシア
