--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -85,9 +85,9 @@
  LOADING_TIP_83: "あんたらを葬ってやる！\n- ニキータ・フルシチョフ"
  LOADING_TIP_84: "さあ国民よ起て！そして嵐よ起きよ！\n- ヨーゼフ・ゲッベルス"
  LOADING_TIP_85: "ゼークトいわく 人間は4種類に大別できる。\n- クルト・フォン・ハンマーシュタイン＝エクヴォルト"
- LOADING_TIP_86: "\n- "
- LOADING_TIP_87: "\n- "
- LOADING_TIP_88: "\n- "
+ LOADING_TIP_86: "戦争とは、敵の意思を屈服させることを目的とする武力行使である。\n- 『戦争論』"
+ LOADING_TIP_87: "戦争は一つの政治的行為である。戦争は他の手段をもってする政治の継続にすぎない。\n- 『戦争論』"
+ LOADING_TIP_88: "名将や軍事的天才は教養の高い国民の中からでなくては生まれない。\n- 『戦争論』"
  LOADING_TIP_89: "\n- "
  LOADING_TIP_90: "\n- "
  LOADING_TIP_91: "\n- "
