--- a/localisation/english/_geacps_music_l_english.yml
+++ b/localisation/english/_geacps_music_l_english.yml
@@ -25,11 +25,14 @@
  Hotaru_No_Hikari:0 "蛍の光"
  Kigen_Nisen_Roppyaku_Nen:0 "紀元二千六百年"
  Kimigayo_Koshinkyoku:0 "君が代行進曲"
+ Getu_Getu_Ka_Sui_Moku_Kin_Kin:0 "月月火水木金金"
  Koshinkyoku_Aikoku:0 "行進曲「愛国」"
+ Koshinkyoku_Gunkan:0 "行進曲「軍艦」"
  Koshinkyoku_Oomikotonori_Houkan:0 "行進曲「大詔奉戴」"
  Koshinkyoku_Nihonkai_Kaisen:0 "行進曲「日本海海戦」"
  Koshinkyoku_Yuki_No_Shingun:0 "行進曲「雪の進軍」"
  Taiheiyou_Koshinkyoku:0 "太平洋行進曲"
+ Rikugun_Bunretsu_Koshinkyoku:0 "陸軍分列行進曲"
  
 #sco-スコットランド語
  Auld_Lang_Syne:0 "Auld Lang Syne"
