--- a/localisation/english/_geacps_bookmarks_l_english.yml
+++ b/localisation/english/_geacps_bookmarks_l_english.yml
@@ -15,7 +15,7 @@
  SER_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  RUS_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
 
- CHI_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "1937年の夏より勃発した日中戦争は、十年近くの歳月を経た現在においても継続している。\nしかし、大日本帝国率いる大東亜共栄圏との長きにわたる戦争について、国民党率いる中央政府は未だ勝利への道をあきらめていない一方で、中華民国の国力は疲弊し、もはや国内の軍閥は中央政府の指示に従おうとはしていない。\nその上中華統一戦線の加盟国も、戦線離脱を望んでおり、各国は自国の戦力をいかに温存すべきかについて注力している。\n残念なことに中華民国の影響力が低下しつつある現状では、大東亜共栄圏に打ち勝つという当初の目標はもはや不可能であるというのが国際世論の見解である。"
+ CHI_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 "1937年の夏より勃発した日中戦争は、十年近くの歳月を経た現在においても継続している。\n\nしかし、大日本帝国率いる大東亜共栄圏との長きにわたる戦争について、国民党率いる中央政府は未だ勝利への道をあきらめていない一方で、中華民国の国力は疲弊し、もはや国内の軍閥は中央政府の指示に従おうとはしていない。\n\nその上中華統一戦線の加盟国も、戦線離脱を望んでおり、各国は自国の戦力をいかに温存すべきかについて注力している。\n\n残念なことに中華民国の影響力が低下しつつある現状では、大東亜共栄圏に打ち勝つという当初の目標はもはや不可能であるというのが国際世論の見解である。"
  TIB_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MON_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
  MEN_THE_GORIOUS_FAR_EAST_EMPIRE_DESC:0 ""
