--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -85,6 +85,10 @@
  MUSCATandOMAN_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
  MUSCATandOMAN_muscat_sultanate_ADJ:0 "マスカット・オマーン"
  
+ TIBET_holy_country:0 "チベット神聖国"
+ TRANSJORDAN_country_DEF:0 "チベット神聖国"
+ TRANSJORDAN_country_ADJ:0 "チベット"
+ 
  TRANSJORDAN_emirate:0 "トランスヨルダン首長国"
  TRANSJORDAN_emirate_DEF:0 "トランスヨルダン首長国"
  TRANSJORDAN_emirate_ADJ:0 "トランスヨルダン"
