--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,16 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_9638:0 "バーゼル"
+ VICTORY_POINTS_6666:0 "ジュネーヴ"
+ VICTORY_POINTS_663:0 "チューリッヒ"
+ VICTORY_POINTS_9784:0 "バーリ"
+ VICTORY_POINTS_883:0 "フォッジャ"
+ VICTORY_POINTS_603:0 "ベローナ"
+ VICTORY_POINTS_11751:0 "フィウミチーノ"
+ VICTORY_POINTS_13338:0 "バチカン"
+ VICTORY_POINTS_3655:0 "ブールジュ"
+ VICTORY_POINTS_3509:0 "ル・マン"
  VICTORY_POINTS_10382:0 "デ・コック砦"
  VICTORY_POINTS_10209:0 "ペカンバル"
  VICTORY_POINTS_4179:0 "今治"
@@ -811,7 +821,7 @@
  VICTORY_POINTS_721:0 "ヘルソン"
  VICTORY_POINTS_406:0 "モウォデチノ"
  VICTORY_POINTS_11598:0 "ボルツァーノ"
- VICTORY_POINTS_651:0 "シャトールー"
+ VICTORY_POINTS_6651:0 "シャトールー"
  VICTORY_POINTS_8066:0 "フズダール"
  VICTORY_POINTS_5105:0 "クエッタ"
  VICTORY_POINTS_12763:0 "ペシャーワル"
