--- a/localisation/english/_geacps_parties_l_english.yml
+++ b/localisation/english/_geacps_parties_l_english.yml
@@ -438,6 +438,33 @@
  SWE_national_authoritarianism_party:0 "ベルナドッテ王朝"
  SWE_national_populism_party:0 "国家社会主義労働者党"
  
+ NOR_total_socialism_party:0 "ノルウェー共産党"
+ NOR_radical_socialism_party:0 "ノルウェー労働総同盟"
+ NOR_social_democracy_party:0 "ノルウェー労働党"
+ NOR_liberal_democracy_party:0 "ノルウェー自由党"
+ NOR_conservative_democracy_party:0 "保守党"
+ NOR_authoritative_democracy_party:0 "キリスト教民主党"
+ NOR_national_authoritarianism_party:0 "グリュックスブルク家"
+ NOR_national_populism_party:0 "国民連合"
+ 
+ FIN_total_socialism_party:0 "フィンランド共産党"
+ FIN_radical_socialism_party:0 "フィンランド人民民主同盟"
+ FIN_social_democracy_party:0 "フィンランド社会民主党"
+ FIN_liberal_democracy_party:0 "フィンランド中央党"
+ FIN_conservative_democracy_party:0 "国民連合党"
+ FIN_authoritative_democracy_party:0 "軍事政権"
+ FIN_national_authoritarianism_party:0 "ヘッセン＝カッセル方伯領"
+ FIN_national_populism_party:0 "ラプア運動"
+ 
+ DEN_total_socialism_party:0 "デンマーク共産党"
+ DEN_radical_socialism_party:0 "デンマーク労働総同盟"
+ DEN_social_democracy_party:0 "デンマーク社会民主党"
+ DEN_liberal_democracy_party:0 "ラディケーリ"
+ DEN_conservative_democracy_party:0 "ヴェンスタ"
+ DEN_authoritative_democracy_party:0 "軍事政権"
+ DEN_national_authoritarianism_party:0 "グリュックスブルク家"
+ DEN_national_populism_party:0 "国家社会主義デンマーク労働者党"
+ 
  SWI_total_socialism_party:0 "スイス労働党"
  SWI_radical_socialism_party:0 "スイス労働党"
  SWI_social_democracy_party:0 "スイス社会民主党"
