--- a/localisation/english/_geacps_politics_l_english.yml
+++ b/localisation/english/_geacps_politics_l_english.yml
@@ -23,6 +23,15 @@
 #SWE
  POLITICS_GUSTAF_V_DESC:0 "グスタフ5世は、スウェーデン・ベルナドッテ王朝の第5代国王。前国王オスカル2世の子。母はナッサウ公ヴィルヘルムの娘ソフィア。"
  
+#NOR
+ POLITICS_Haakon_VII_DESC:0 "1905年、ノルウェーはスウェーデンとの同君連合を解消して独立したが、その際に大叔父のスウェーデン＝ノルウェー国王オスカル2世に代わってノルウェー国王に選ばれた。そこでノルウェー風にホーコンと改名し、首都クリスチャニア（現在のオスロ）で即位した。\n1940年からノルウェーも巻き込まれた第二次世界大戦の際、一時期イギリスに亡命するも、ナチス・ドイツと徹底的に戦い、大きな国民の尊敬を集めた。"
+ 
+#FIN
+ POLITICS_Carl_Gustaf_Emil_Mannerheim_DESC:0 "士官候補生としてロシア帝国陸軍に入隊し、日露戦争などで実績を積み将軍となった。第一次世界大戦中にフィンランドが独立すると、その後の混乱から起こったフィンランド内戦で、白衛軍の司令官として闘った。独立早期、フィンランドが君主制を目指した際には摂政として連合国に独立承認を求めた。その後、一時は公職を離れたが、第二次大戦突入前の情勢不安の中で先の実績を買われて国防委員長となり、軍の装備の更新などに力を入れた。その後のソ連との戦争である冬戦争、継続戦争においては最高指揮官となり、フィンランドの防衛を行った。継続戦争の戦況悪化とナチス・ドイツとの同盟の責任から大統領を辞したリスト・リュティを継いで、1944年から1946年にかけて第6代大統領となり、ラップランド戦争でナチス・ドイツと戦い、ソ連との難しい講和を成し遂げ、独立を保った。"
+ 
+#DEN
+ POLITICS_Christian_X_DESC:0 ""
+ 
 #POL
  POLITICS_BOLESLAW_BIERUT_DESC:0 "1892年4月18日、ルブリン近郊の街ルリに生まれる。\n1912年にポーランド社会党に入党し、同党左派に属した。1918年にポーランド・リトアニア王国社会民主党との合同によりポーランド共産党が結党されると引き続き所属する。ポーランド共産党にもヨシフ・スターリンの大粛清の嵐が吹き荒れたが、ビェルトは粛清を免れ、1942年のポーランド労働者党の創立に参加する。\nその後ソビエト連邦によりポーランドが「解放」されるとビェルトは人民評議会議長に就任し、ポーランド労働者党は社会党を併合しポーランド統一労働者党となる。ビェルトは初代書記長に就任し、「小スターリン」としてスターリン主義的な恐怖政治をポーランドに敷いた。"
  
