--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -338,6 +338,18 @@
  SWEandNOR_unitded_kingdom_DEF:0 "スウェーデン及びノルウェー連合王国"
  SWEandNOR_unitded_kingdom_ADJ:0 "スウェーデン・ノルウェー"
  
+ FIN_socialist_workers_republic:0 "フィンランド社会主義労働者共和国"
+ FIN_socialist_workers_republic_DEF:0 "フィンランド社会主義労働者共和国"
+ FIN_socialist_workers_republic_ADJ:0 "フィンランド"
+ 
+ FIN_democratic_republic:0 "フィンランド民主共和国"
+ FIN_democratic_republic_DEF:0 "フィンランド民主共和国"
+ FIN_democratic_republic_ADJ:0 "フィンランド"
+ 
+ FIN_kingdom:0 "フィンランド王国"
+ FIN_kingdom_DEF:0 "フィンランド王国"
+ FIN_kingdom_ADJ:0 "フィンランド"
+ 
  TWOSICILIES_kingdom:0 "両シチリア王国"
  TWOSICILIES_kingdom_DEF:0 "両シチリア王国"
  TWOSICILIES_kingdom_ADJ:0 "両シチリア"
