--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -33,8 +33,8 @@
  STATE_32:0 "ローヌ＝アルプ"
  STATE_33:0 "シェール"
  STATE_34:0 "ワロン"
- STATE_35:0 "ノルトブラバント"
- STATE_36:0 "フリースラント"
+ STATE_35:0 "南オランダ"
+ STATE_36:0 "北オランダ"
  STATE_37:0 "シェラン"
  STATE_38:0 "ノールランド"
  STATE_39:0 "トレンティーノ＝アルト・アディジェ"
@@ -1131,8 +1131,8 @@
  STATE_1130:0 "チャンパーサック西部"
  STATE_1131:0 "ダルマチア"
  STATE_1132:0 "スラボニア"
- STATE_1133:0 "ドルトレヒト"
- STATE_1134:0 "ナイメーヘン"
+ STATE_1133:0 "南ホラント"
+ STATE_1134:0 "東オランダ"
  STATE_1135:0 "ナンシー"
  STATE_1136:0 "グアンタナモ湾"
  STATE_1137:0 "ナンガルハール"
