--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -16,6 +16,7 @@
  VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
  
+ VICTORY_POINTS_3488:0 "オイペン"
  VICTORY_POINTS_11604:0 "ルツェルン"
  VICTORY_POINTS_9638:0 "バーゼル"
  VICTORY_POINTS_6666:0 "ジュネーヴ"
