--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -1,21 +1,27 @@
 ﻿l_english:
 #主要国首都
  VICTORY_POINTS_1182:0 "東京"
- VICTORY_POINTS_11506:0 "パリ"
- VICTORY_POINTS_6103:0 "ロンドン"
  VICTORY_POINTS_3957:0 "コロンビア特別区"
+ VICTORY_POINTS_6103:0 "ロンドン"
  VICTORY_POINTS_6380:0 "モスクワ"
  #VICTORY_POINTS_6521:0 "ベルリン"
- VICTORY_POINTS_13238:0 "ベルリン"
  VICTORY_POINTS_9904:0 "ローマ"
+ VICTORY_POINTS_11506:0 "パリ"
+ VICTORY_POINTS_13238:0 "ベルリン"
  
 #主要都市
+ VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_9998:0 "横浜"
  VICTORY_POINTS_10125:0 "名古屋"
  VICTORY_POINTS_11960:0 "京都"
- VICTORY_POINTS_7072:0 "大阪"
  VICTORY_POINTS_12031:0 "神戸"
+ VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_11634:0 "ヴェルグル"
+ VICTORY_POINTS_6680:0 "ブレゲンツ"
+ VICTORY_POINTS_9661:0 "バーデン・バイ・ウィーン"
+ VICTORY_POINTS_704:0 "ザンクト・ペルテン"
+ VICTORY_POINTS_3700:0 "アイゼンシュタット"
  VICTORY_POINTS_3488:0 "オイペン"
  VICTORY_POINTS_11604:0 "ルツェルン"
  VICTORY_POINTS_9638:0 "バーゼル"
