その他調整_2

--- a/localisation/english/geacps_EGR_l_english.yml
+++ b/localisation/english/geacps_EGR_l_english.yml
@@ -7,4 +7,4 @@
  EGR_denazification:0 "非ナチ化"
  EGR_hegemonic_party_system:0 "ヘゲモニー政党制"
  EGR_stasi:0 "シュタージ"
- EGR_the_east-west_german_wall:0 ""東西ドイツ"の壁"
+ EGR_the_east-west_german_wall:0 "”東西ドイツ”の壁"
