--- a/localisation/english/geacps_WGR_l_english.yml
+++ b/localisation/english/geacps_WGR_l_english.yml
@@ -6,4 +6,4 @@
  WGR_potsdam_agreement:0 "ポツダム協定"
  WGR_denazification:0 "非ナチ化"
  WGR_republic_of_Bonn:0 "ボン帝国"
- WGR_the_east-west_german_wall:0 ""東西ドイツ"の壁"
+ WGR_the_east-west_german_wall:0 "”東西ドイツ”の壁"
