謎のチャーチルのドナウ連邦推し
寝る！！！！！

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -118,6 +118,14 @@
  AUS-HUN_monarchy_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_monarchy_ADJ:0 "オーストリア＝ハンガリー"
  
+ DAN_united_republic:0 "ドナウ連邦共和国"
+ DAN_united_republic_DEF:0 "ドナウ連邦共和国"
+ DAN_united_republic_ADJ:0 "ドナウ"
+ 
+ SGR_united_republic:0 "南ドイツ連合共和国"
+ SGR_united_republic_DEF:0 "南ドイツ連合共和国"
+ SGR_united_republic_ADJ:0 "南ドイツ"
+ 
  BATAVIA_republic:0 "バタビア共和国"
  BATAVIA_republic_DEF:0 "バタビア共和国"
  BATAVIA_republic_ADJ:0 "バタビア"
