--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1339,6 +1339,10 @@
  VAT_DEF:0 "バチカン"
  VAT_ADJ:0 "バチカン"
  
+ VIE:0 "ウィーン"
+ VIE_DEF:0 "ウィーン"
+ VIE_ADJ:0 "ウィーン"
+ 
  VNC:0 "ヴェネツィア"
  VNC_DEF:0 "ヴェネツィア"
  VNC_ADJ:0 "ヴェネツィア"
