--- a/localisation/english/_geacps_factions_l_english.yml
+++ b/localisation/english/_geacps_factions_l_english.yml
@@ -5,3 +5,5 @@
  COMINFORM:0 "コミンフォルム"
  ANTI-JAPANESE_NATIONAL_UNITED_FRONT:0 "抗日民族統一戦線"
  CHINESE_PEOPLE'S_FRONT:0 "中華人民戦線"
+ 
+ #NEW_HANSEATIC_LEAGUE:0 "新ハンザ同盟"
