--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,10 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_6595:0 "ジャリ"
+ VICTORY_POINTS_9496:0 "フランクフルト"
+ VICTORY_POINTS_9416:0 "バンベルク"
+ VICTORY_POINTS_586:0 "バイロイト"
  VICTORY_POINTS_11634:0 "ヴェルグル"
  VICTORY_POINTS_6680:0 "ブレゲンツ"
  VICTORY_POINTS_9661:0 "バーデン・バイ・ウィーン"
@@ -66,7 +70,7 @@
  VICTORY_POINTS_692:0 "ミュンヘン"
  VICTORY_POINTS_6469:0 "エッセン"
  VICTORY_POINTS_9347:0 "ハンブルク"
- VICTORY_POINTS_9570:0 "ブレスラウ"
+ VICTORY_POINTS_9570:0 "ヴロツワフ"
  VICTORY_POINTS_241:0 "ヴィルヘルムスハーフェン"
  VICTORY_POINTS_321:0 "ロストック"
  VICTORY_POINTS_514:0 "ドレスデン"
@@ -74,7 +78,7 @@
  VICTORY_POINTS_3326:0 "ブレーメン"
  VICTORY_POINTS_3522:0 "マクデブルク"
  VICTORY_POINTS_3535:0 "ライプツィヒ"
- VICTORY_POINTS_6282:0 "シュテッティン"
+ VICTORY_POINTS_6282:0 "シュチェチン"
  VICTORY_POINTS_6332:0 "ケーニヒスベルク"
  VICTORY_POINTS_6377:0 "ハノーファー"
  VICTORY_POINTS_6389:0 "キール"
@@ -86,12 +90,12 @@
  VICTORY_POINTS_6364:0 "オーフス"
  VICTORY_POINTS_3544:0 "ワルシャワ"
  VICTORY_POINTS_9427:0 "クラクフ"
- VICTORY_POINTS_362:0 "ダンツィヒ"
+ VICTORY_POINTS_362:0 "グダニスク"
  VICTORY_POINTS_3320:0 "ヴィリニュス"
  VICTORY_POINTS_3392:0 "ブレスト＝リトフスク"
  VICTORY_POINTS_3393:0 "グロドノ"
  VICTORY_POINTS_6558:0 "ポズナニ"
- VICTORY_POINTS_9508:0 "ウーチ"
+ VICTORY_POINTS_9508:0 "ウッチ"
  VICTORY_POINTS_11479:0 "ルヴフ"
  VICTORY_POINTS_11666:0 "ウィーン"
  VICTORY_POINTS_673:0 "インスブルック"
@@ -714,7 +718,7 @@
  VICTORY_POINTS_153:0 "ウィレムスタット"
  VICTORY_POINTS_7376:0 "プノンペン"
  VICTORY_POINTS_1464:0 "ヴィエンチャン"
- VICTORY_POINTS_6464:0 "カトヴィツェ"
+ VICTORY_POINTS_506:0 "カトヴィツェ"
  VICTORY_POINTS_11467:0 "グライヴィッツ"
  VICTORY_POINTS_9511:0 "オッペルン"
  VICTORY_POINTS_552:0 "リーグニッツ"
@@ -767,7 +771,7 @@
  VICTORY_POINTS_3585:0 "カールスバート"
  VICTORY_POINTS_11432:0 "アスィヒ"
  VICTORY_POINTS_11401:0 "リベレツ"
- VICTORY_POINTS_3473:0 "キュストリン"
+ VICTORY_POINTS_3473:0 "ジェピン"
  VICTORY_POINTS_9388:0 "シュトラールズント"
  VICTORY_POINTS_11305:0 "リューベック"
  VICTORY_POINTS_11372:0 "ケスリーン"
