--- a/localisation/english/geacps_JAP_l_english.yml
+++ b/localisation/english/geacps_JAP_l_english.yml
@@ -206,7 +206,7 @@
  
 #国民精神
  JAP_high_defence_state_system:0 "高度国防国家体制"
- JAP_high_defence_state_system_desc:0 "この秋に当り世界情勢に即応しつつ能く支那事変の処理を完遂すると共に、進んで世界新秩序の建設に指導的役割を果す為には、国家国民の総力を最高度に発揮してこの大事業に集中し如何なる事態が発生するとも独自の立場に於て迅速果敢且有効適切に之に対処し得るやう高度国防国家の体制へ整へねばならぬ。"
+ JAP_high_defence_state_system_desc:0 "”この秋に当り世界情勢に即応しつつ能く支那事変の処理を完遂すると共に、進んで世界新秩序の建設に指導的役割を果す為には、国家国民の総力を最高度に発揮してこの大事業に集中し如何なる事態が発生するとも独自の立場に於て迅速果敢且有効適切に之に対処し得るやう高度国防国家の体制へ整へねばならぬ。”"
  JAP_privy_council:0 "枢密院"
  JAP_privy_council_desc:0 "枢密院は、枢密顧問により組織される天皇の諮問機関。"
  JAP_planning_institute:0 "企画院"
