英国勝利点追加兵

--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,16 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_6489:0 "サウサンプトン"
+ VICTORY_POINTS_11446:0 "ブライトン"
+ VICTORY_POINTS_9239:0 "オックスフォード"
+ VICTORY_POINTS_11253:0 "ケンブリッジ"
+ VICTORY_POINTS_11136:0 "アバディーン"
+ VICTORY_POINTS_9161:0 "インヴァネス"
+ VICTORY_POINTS_11345:0 "ストーク･オン･トレント"
+ VICTORY_POINTS_6237:0 "ノッティンガム"
+ VICTORY_POINTS_11279:0 "レスター"
+ VICTORY_POINTS_6270:0 "コヴェントリー"
  VICTORY_POINTS_6595:0 "ジャリ"
  VICTORY_POINTS_9496:0 "フランクフルト"
  VICTORY_POINTS_9416:0 "バンベルク"
@@ -226,7 +236,7 @@
  VICTORY_POINTS_9483:1 "シャウレイ"
  VICTORY_POINTS_3273:0 "グラスゴー"
  VICTORY_POINTS_9297:0 "バーミンガム"
- VICTORY_POINTS_351:0 "ニューカッスル"
+ VICTORY_POINTS_351:0 "ニューカッスル･アポン･タイン"
  VICTORY_POINTS_3369:0 "ブリストル"
  VICTORY_POINTS_3379:0 "ベルファスト"
  VICTORY_POINTS_6384:0 "リバプール"
@@ -577,7 +587,7 @@
  VICTORY_POINTS_4206:0 "テルアビブ"
  VICTORY_POINTS_4464:0 "ビロクシ"
  VICTORY_POINTS_5074:0 "アデン"
- VICTORY_POINTS_6300:0 "ロサイス"
+ VICTORY_POINTS_6300:0 "ダンディー"
  VICTORY_POINTS_3561:0 "エアフルト"
  VICTORY_POINTS_6882:0 "ニューアーク"
  VICTORY_POINTS_6973:0 "ラ・スペツィア"
@@ -605,7 +615,7 @@
  VICTORY_POINTS_10862:0 "アクラ"
  VICTORY_POINTS_11064:0 "スカパフロー"
  VICTORY_POINTS_271:0 "ノリッジ"
- VICTORY_POINTS_11297:0 "ハル"
+ VICTORY_POINTS_11297:0 "キングストン･アポン･ハル"
  VICTORY_POINTS_11435:0 "ビットブルク"
  VICTORY_POINTS_12674:0 "レイキャビク"
  VICTORY_POINTS_11746:0 "アダナ"
@@ -714,7 +724,7 @@
  VICTORY_POINTS_8038:0 "ラユーン"
  VICTORY_POINTS_11350:0 "ブリッジタウン"
  VICTORY_POINTS_4967:0 "マレ"
- VICTORY_POINTS_9315:0 "シェフィールド"
+ VICTORY_POINTS_11382:0 "シェフィールド"
  VICTORY_POINTS_153:0 "ウィレムスタット"
  VICTORY_POINTS_7376:0 "プノンペン"
  VICTORY_POINTS_1464:0 "ヴィエンチャン"
