--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -668,7 +668,7 @@
  STATE_667:0 "バリ"
  STATE_668:0 "北マルク"
  STATE_669:0 "西イリアンジャヤ"
- STATE_670:0 "ラオス"
+ STATE_670:0 "北部"
  STATE_671:0 "北中部"
  STATE_672:0 "北スマトラ"
  STATE_673:0 "中部スラウェシ"
@@ -1056,7 +1056,7 @@
  STATE_1055:0 "ヴェトルジュスキー"
  STATE_1056:0 "コストロマ"
  STATE_1057:0 "タニンダーリ"
- STATE_1058:0 "チャンパーサック"
+ STATE_1058:0 "南部"
  STATE_1059:0 "スワジランド"
  STATE_1060:0 "バストランド"
  STATE_1061:0 "マン島"
@@ -1128,7 +1128,7 @@
  STATE_1127:0 "プレアタボン"
  STATE_1128:0 "ピブーンソンクラーム"
  STATE_1129:0 "プリアヴィヒア北部"
- STATE_1130:0 "チャンパーサック西部"
+ STATE_1130:0 "ムーンラパモーク"
  STATE_1131:0 "ダルマチア"
  STATE_1132:0 "スラボニア"
  STATE_1133:0 "南ホラント"
@@ -1295,3 +1295,4 @@
  STATE_1296:0 "西スラウェシ"
  STATE_1297:0 "イリアンジャヤ"
  STATE_1298:0 "ウィーン"
+ STATE_1299:0 "中部"
