--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,17 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_1374:0 "パークセー"
+ VICTORY_POINTS_4539:0 "カイソーン・ポムウィハーン"
+ VICTORY_POINTS_10496:0 "ルアンパバーン"
+ VICTORY_POINTS_9948:0 "ランソン"
+ VICTORY_POINTS_1575:0 "風陵渡"
+ VICTORY_POINTS_4525:0 "包頭"
+ VICTORY_POINTS_4093:0 "石家荘"
+ VICTORY_POINTS_7502:0 "衡陽"
+ VICTORY_POINTS_12432:0 "大同"
+ VICTORY_POINTS_7656:0 "開封"
+ VICTORY_POINTS_9956:0 "徐州"
  VICTORY_POINTS_6489:0 "サウサンプトン"
  VICTORY_POINTS_11446:0 "ブライトン"
  VICTORY_POINTS_9239:0 "オックスフォード"
