色々あるので纏めました(諦め)

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -13,6 +13,10 @@
  GREENRUSSIA_empire_DEF:0 "緑ロシア帝国"
  GREENRUSSIA_empire_ADJ:0 "緑ロシア"
  
+ CHM_kingdom:0 "チャンパーサック王国"
+ CHM_kingdom_DEF:0 "チャンパーサック王国"
+ CHM_kingdom_ADJ:0 "チャンパーサック"
+ 
  CHOSON_kingdom:0 "朝鮮王国"
  CHOSON_kingdom_DEF:0 "朝鮮王国"
  CHOSON_kingdom_ADJ:0 "朝鮮"
@@ -84,6 +88,10 @@
  MUSCATandOMAN_sultanate:0 "マスカット及びオマーン・スルタン国"
  MUSCATandOMAN_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
  MUSCATandOMAN_muscat_sultanate_ADJ:0 "マスカット・オマーン"
+ 
+ NAM_republic:0 "コーチシナ共和国"
+ NAM_republic_DEF:0 "コーチシナ共和国"
+ NAM_republic_ADJ:0 "コーチシナ"
  
  TIBET_holy_country:0 "チベット神聖国"
  TRANSJORDAN_country_DEF:0 "チベット神聖国"
