--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -48,6 +48,10 @@
  CHI_DEF:0 "中華"
  CHI_ADJ:0 "中華"
  
+ CHM:0 "チャンパーサック"
+ CHM_DEF:0 "チャンパーサック"
+ CHM_ADJ:0 "チャンパーサック"
+ 
  CKK:0 "チュクチ"
  CKK_DEF:0 "チュクチ"
  CKK_ADJ:0 "チュクチ"
@@ -143,6 +147,10 @@
  MON:0 "モンゴル"
  MON_DEF:0 "モンゴル"
  MON_ADJ:0 "モンゴル"
+ 
+ NAM:0 "コーチシナ"
+ NAM_DEF:0 "コーチシナ"
+ NAM_ADJ:0 "コーチシナ"
  
  NEP:0 "ネパール"
  NEP_DEF:0 "ネパール"
