--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -739,7 +739,7 @@
  STATE_738:0 "マルク"
  STATE_739:0 "ハイダグアイ"
  STATE_740:0 "バンクーバー島"
- STATE_741:0 "カンボジア西部"
+ STATE_741:0 "プノンペン"
  STATE_742:0 "スタリナバード"
  STATE_743:0 "青島"
  STATE_744:0 "西安"
@@ -1252,7 +1252,7 @@
  STATE_1253:0 "南千島列島"
  STATE_1254:0 "道東"
  STATE_1255:0 "カヤ西部"
- STATE_1256:0 "カンボジア東部"
+ STATE_1256:0 "バンルン"
  STATE_1257:0 "メコンデルタ"
  STATE_1258:0 "サイニャブーリー"
  STATE_1259:0 "南ベンガル"
@@ -1296,3 +1296,4 @@
  STATE_1297:0 "イリアンジャヤ"
  STATE_1298:0 "ウィーン"
  STATE_1299:0 "中部"
+ STATE_1300:0 "コンポンチャム"
