--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,22 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_4302:0 "シェムリアップ"
+ VICTORY_POINTS_4251:0 "シソポン"
+ VICTORY_POINTS_10177:0 "バタンバン"
+ VICTORY_POINTS_1185:0 "ナムディン"
+ VICTORY_POINTS_7271:0 "ダラット"
+ VICTORY_POINTS_10261:0 "タイニン"
+ VICTORY_POINTS_1423:0 "ミトー"
+ VICTORY_POINTS_10232:0 "ファンティエット"
+ VICTORY_POINTS_10162:0 "ニャチャン"
+ VICTORY_POINTS_10137:0 "ホイアン"
+ VICTORY_POINTS_4379:0 "フエ"
+ VICTORY_POINTS_12133:0 "カントー"
+ VICTORY_POINTS_4119:0 "ハイフォン"
+ VICTORY_POINTS_10309:0 "ダナン"
+ VICTORY_POINTS_12008:0 "ラオカイ"
+ VICTORY_POINTS_10257:0 "宝鶏"
  VICTORY_POINTS_1374:0 "パークセー"
  VICTORY_POINTS_4539:0 "カイソーン・ポムウィハーン"
  VICTORY_POINTS_10496:0 "ルアンパバーン"
