--- a/localisation/replace/_geacps_strategic_region_names_l_english.yml
+++ b/localisation/replace/_geacps_strategic_region_names_l_english.yml
@@ -6,10 +6,26 @@
  STRATEGICREGION_11:0 "ノルウェー半島"
  STRATEGICREGION_12:0 "コラ半島"
  STRATEGICREGION_13:0 "フィンランド半島"
+ STRATEGICREGION_20:0 "ル・ミディ"
  STRATEGICREGION_22:0 "聖ヴァーツラフ王冠地域"
+ STRATEGICREGION_23:0 "メッツォジョールノ"
  STRATEGICREGION_25:0 "バルカン南部"
- 
- STRATEGICREGION_229:0 "ユトランド半島"
  
  STRATEGICREGION_38:0 "ポーランド北西部"
  STRATEGICREGION_39:0 "ポーランド南東部"
+ 
+ STRATEGICREGION_131:0 "白ルーシ"
+ 
+ STRATEGICREGION_148:0 "ウラジオストク"
+ 
+ STRATEGICREGION_196:0 "アラビア半島"
+ 
+ STRATEGICREGION_228:0 "ユトランド半島"
+ 
+ STRATEGICREGION_229:0 "インドシナ半島"
+ STRATEGICREGION_230:0 "パダーニア"
+ STRATEGICREGION_231:0 "シベリア南部"
+ STRATEGICREGION_232:0 "塞北"
+ STRATEGICREGION_233:0 "華中"
+ STRATEGICREGION_234:0 "インド西部"
+ STRATEGICREGION_235:0 "中央インド"
