--- a/localisation/english/geacps_JAP_l_english.yml
+++ b/localisation/english/geacps_JAP_l_english.yml
@@ -5,7 +5,7 @@
  JAP_Organise_a_meeting_of_the_chief_ministers:0 "重臣会議を開催する"
  JAP_Organise_a_meeting_of_the_chief_ministers_desc:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一\n大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎\n海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
  JAP_Cabinet_meeting:0 "閣議を開く"
- JAP_Cabinet_meeting_desc:0 "一・二二事件を受けて閣議を開き、早急に対応しなければならない。"
+ JAP_Cabinet_meeting_desc:0 "一・二二事件を受けて各国務大臣を招集して閣議を開き、当案件に対し早急に対応しなければならない。"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
  JAP_Declaration_of_martial_law_desc:0 "賊軍に対する迅速対処の為、昭和天皇による戒嚴令の施行を支持を頂いた後に宣告を行う必要がある。"
  JAP_Trial_of_naval_officers:0 "海軍士官の裁判"
@@ -254,7 +254,7 @@
  geacps_JAP.1.t:0 "大日本帝國"
  geacps_JAP.1.d:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。"
  geacps_JAP.1.a:0 "天皇陛下万歳！大日本帝国万歳！"
- geacps_JAP.2.t:0 "一・二二事件の発生"
+ geacps_JAP.2.t:0 "一・二二事件"
  geacps_JAP.2.d:0 "昭和21年1月22日、皇道派の影響を受けた陸軍青年将校らと一部の農本主義者、武装した海軍青年士官らが徒党を組み、帝都にてクーデターを起こした。\n本件で標的にされた東條英機首相は、銃撃され重体になられた..."
  geacps_JAP.2.a:0 "叛乱軍を捕らえよ！"
  geacps_JAP.3.t:0 "臨時代理"
@@ -306,8 +306,8 @@
 #ディシジョン
  JAP_Coup_detat_in_the_offing:0 "クーデターの予感"
  JAP_Coup_detat_in_the_offing_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
- Outbreak_of_the_1-22_Incident:0 "一・二二事件の発生"
- Outbreak_of_the_1-22_Incident_desc:0 "一・二二事件の発生"
+ Outbreak_of_the_1-22_Incident:0 "一・二二事件"
+ Outbreak_of_the_1-22_Incident_desc:0 "一・二二事件"
  JAP_national_policy_research_outline:0 "国策研究大綱"
  JAP_national_policy_research_outline_desc:0 "研究こそすべて！\n頑張ろう\nこのディシジョンは4年ごとに選択可能です"
  national_policy_research_outline:0 "[GetYear]年国策研究大綱"
