--- a/localisation/replace/_geacps_strategic_region_names_l_english.yml
+++ b/localisation/replace/_geacps_strategic_region_names_l_english.yml
@@ -14,11 +14,16 @@
  STRATEGICREGION_38:0 "ポーランド北西部"
  STRATEGICREGION_39:0 "ポーランド南東部"
  
+ STRATEGICREGION_41:0 "イベリア東部"
+ 
+ STRATEGICREGION_130:0 "ドニプロ・ウクライナ"
  STRATEGICREGION_131:0 "白ルーシ"
  
  STRATEGICREGION_148:0 "ウラジオストク"
  
  STRATEGICREGION_196:0 "アラビア半島"
+ 
+ STRATEGICREGION_209:0 "イベリア西部"
  
  STRATEGICREGION_228:0 "ユトランド半島"
  
@@ -29,3 +34,9 @@
  STRATEGICREGION_233:0 "華中"
  STRATEGICREGION_234:0 "インド西部"
  STRATEGICREGION_235:0 "中央インド"
+ STRATEGICREGION_236:0 "紅ルーシ"
+ STRATEGICREGION_237:0 "小ロシア"
+ STRATEGICREGION_238:0 "モルダヴィア"
+ STRATEGICREGION_239:0 "クリミア半島"
+ STRATEGICREGION_240:0 "イベリア北部"
+ STRATEGICREGION_241:0 "中央イベリア"
