--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -518,9 +518,9 @@
  STATE_517:0 "ビクトリア"
  STATE_518:0 "タスマニア"
  STATE_519:0 "南オーストラリア"
- STATE_520:0 "ノーザンテリトリー"
+ STATE_520:0 "北オーストラリア"
  STATE_521:0 "クイーンズランド"
- STATE_522:0 "オーストラリア西部"
+ STATE_522:0 "西オーストラリア"
  STATE_523:0 "東ニューギニア"
  STATE_524:0 "台北"
  STATE_525:0 "京城"
