--- a/localisation/replace/_geacps_strategic_region_names_l_english.yml
+++ b/localisation/replace/_geacps_strategic_region_names_l_english.yml
@@ -40,3 +40,5 @@
  STRATEGICREGION_239:0 "クリミア半島"
  STRATEGICREGION_240:0 "イベリア北部"
  STRATEGICREGION_241:0 "中央イベリア"
+ STRATEGICREGION_242:0 "スロボダ・ウクライナ"
+ STRATEGICREGION_243:0 "黒ルーシ"
