--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,10 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_10411:0 "ムアンナコーンサワン"
+ VICTORY_POINTS_10398:0 "ピッサヌローク"
+ VICTORY_POINTS_7492:0 "ムアンラムパーン"
+ VICTORY_POINTS_12191:0 "ポーサット"
  VICTORY_POINTS_4302:0 "シェムリアップ"
  VICTORY_POINTS_4251:0 "シソポン"
  VICTORY_POINTS_10177:0 "バタンバン"
