--- a/localisation/english/_geacps_factions_l_english.yml
+++ b/localisation/english/_geacps_factions_l_english.yml
@@ -10,4 +10,4 @@
  #EURASIAN_ECONOMIC_UNION:0 "ユーラシア連合"
  #NEW_HANSEATIC_LEAGUE:0 "新ハンザ同盟"
  #NORTH_ATLANTIC_TREATY_ORGANIZATION:0 "北大西洋条約機構"
- #UNION_STATE_OF_RUSSIA_AND_BELARUS:0 "ベラルーシ・ロシア連合国家"
+ #UNION_STATE_OF_RUSSIA_AND_BELARUS:0 "ロシア・ベラルーシ連盟"
