--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -121,6 +121,10 @@
  TRANSCAUCASIAN_democratic_federative_republic_DEF:0 "トランスコーカサス民主連邦共和国"
  TRANSCAUCASIAN_democratic_federative_republic_ADJ:0 "トランスコーカサス"
  
+ UNION_RUS-BLR:0 "ロシア・ベラルーシ連盟国"
+ UNION_RUS-BLR_DEF:0 "ロシア・ベラルーシ連盟国"
+ UNION_RUS-BLR_ADJ:0 "連盟国"
+ 
 #ヨーロッパ
  AUS-HUN_monarchy:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
  AUS-HUN_monarchy_DEF:0 "オーストリア諸邦ならびに神聖なるハンガリーのイシュトヴァーン王冠の諸邦"
