--- a/localisation/english/_geacps_political_tab_l_english.yml
+++ b/localisation/english/_geacps_political_tab_l_english.yml
@@ -13,7 +13,7 @@
  company_category:0 "企業"
  military_category:0 "軍部"
 
-#政治体制
+#国家体制
  anarchy:0 "無政府"
  confederation_state:0 "連合国家"
  unitary_state:0 "単一国家"
@@ -24,3 +24,19 @@
 #統治体制
  monarchy:0 "君主制"
  republic:0 "共和制"
+ 
+#経済法
+ non_market_economics:0 "非市場経済"
+ planned_economy:0 "計画経済"
+ mixed_economy:0 "混合経済"
+ market_economy:0 "市場経済"
+ 
+#貿易法
+ protectionism:0 "保護貿易"
+ free_trade:0 "自由貿易"
+ 
+#徴兵法
+ permanently_neutral:0 "永世中立"
+ all_volunteer_military_system:0 "志願制度"
+ levee_en_masse:0 "国民皆兵"
+ mobilizing_en_masse:0 "根こそぎ動員"
