--- a/localisation/replace/_geacps_strategic_region_names_l_english.yml
+++ b/localisation/replace/_geacps_strategic_region_names_l_english.yml
@@ -18,14 +18,18 @@
  
  STRATEGICREGION_130:0 "左岸ウクライナ"
  STRATEGICREGION_131:0 "白ルーシ"
+ STRATEGICREGION_135:0 "南ロシア"
  
  STRATEGICREGION_148:0 "ウラジオストク"
+ 
+ STRATEGICREGION_155:0 "北満州"
  
  STRATEGICREGION_196:0 "アラビア半島"
  
  STRATEGICREGION_209:0 "イベリア西部"
  
- STRATEGICREGION_228:0 "ナミビア"
+ STRATEGICREGION_215:0 "ナミビア"
+ STRATEGICREGION_228:0 "ユトランド"
  
  STRATEGICREGION_229:0 "インドシナ半島"
  STRATEGICREGION_230:0 "パダーニア"
@@ -53,3 +57,4 @@
  STRATEGICREGION_252:0 "中央黒土"
  STRATEGICREGION_253:0 "ヴォルガ＝ヴャトカ"
  STRATEGICREGION_254:0 "スターリングラード"
+ STRATEGICREGION_255:0 "南満州"
