良く分からないので色々纏めてますが、ご了承下さい。

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -295,6 +295,10 @@
  HOLY-MOUNTAIN_autonomous_monastic_state_DEF:0 "聖なる山自治修道士国"
  HOLY-MOUNTAIN_autonomous_monastic_state_ADH:0 "聖なる山"
  
+ HUN_provisional_national_government:0 "ハンガリー臨時国民政府"
+ HUN_provisional_national_government_DEF:0 "ハンガリー臨時国民政府"
+ HUN_provisional_national_government_ADH:0 "ハンガリー"
+ 
  IREandGBR_united_kingdom:0 "アイルランド及びグレートブリテン連合王国"
  IREandGBR_united_kingdom_DEF:0 "アイルランド及びグレートブリテン連合王国"
  IREandGBR_united_kingdom_ADJ:0 "アイルランド"
