--- a/localisation/english/geacps_CZE_l_english.yml
+++ b/localisation/english/geacps_CZE_l_english.yml
@@ -72,4 +72,7 @@
  CZE_socialist_industrialization:0 "社会主義的な工業化"
  
 #国民精神
+ CZE_state_security:0 "StB"
  CZE_People's_Democracy_Manifesto:0 "人民民主主義宣言"
+
+#イベント
