--- a/localisation/english/geacps_HUN_l_english.yml
+++ b/localisation/english/geacps_HUN_l_english.yml
@@ -2,7 +2,8 @@
 #国家方針
  
 #国民精神
- HUN_AVO:0 "ハンガリー国家保衛庁"
+ HUN_state_protection_authority:0 "PRO"
+ HUN_Miklos_Horthy_In_Exile:0 "”ヴィテーズ”の亡命"
 
 #イベント
  HUN.0.t:0 "ドナウ連邦構想"
