--- a/localisation/english/geacps_POL_l_english.yml
+++ b/localisation/english/geacps_POL_l_english.yml
@@ -1,6 +1,13 @@
 ﻿l_english:
+#国家方針
+ 
+#国民精神
+ POL_ministry_of_public_security:0 "MBP"
+
+#イベント
+
 #dynamic_modifier
-POL_German_resistance_strong_modifier:0 "ドイツ人反抗勢力は§R強く抵抗している§!"
-POL_German_resistance_medium_modifier:0 "ドイツ人反抗勢力は§Y安定を乱している§!"
-POL_German_resistance_weak_modifier:0 "ドイツ人反抗勢力の§G抵抗は弱い§!"
-POL_German_resistance_no_modifier:0 "ドイツ人の反抗は§W打ち砕かれた§!"
+ POL_German_resistance_strong_modifier:0 "ドイツ人反抗勢力は§R強く抵抗している§!"
+ POL_German_resistance_medium_modifier:0 "ドイツ人反抗勢力は§Y安定を乱している§!"
+ POL_German_resistance_weak_modifier:0 "ドイツ人反抗勢力の§G抵抗は弱い§!"
+ POL_German_resistance_no_modifier:0 "ドイツ人の反抗は§W打ち砕かれた§!"
