--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -1237,7 +1237,7 @@
  STATE_1236:0 "バーレーン"
  STATE_1237:0 "シェパード諸島"
  STATE_1238:0 "ジュビー岬"
- STATE_1239:0 "間宮"
+ STATE_1239:0 "尼港"
  STATE_1240:0 "湘西"
  STATE_1241:0 "ウラル"
  STATE_1242:0 "チカロフスク"
