--- a/localisation/replace/_geacps_victory_points_l_english.yml
+++ b/localisation/replace/_geacps_victory_points_l_english.yml
@@ -17,6 +17,7 @@
  VICTORY_POINTS_12031:0 "神戸"
  VICTORY_POINTS_13237:0 "デュッセルドルフ"
  
+ VICTORY_POINTS_7868:0 "尼港"
  VICTORY_POINTS_10411:0 "ムアンナコーンサワン"
  VICTORY_POINTS_10398:0 "ピッサヌローク"
  VICTORY_POINTS_7492:0 "ムアンラムパーン"
