--- a/localisation/english/geacps_JAP_l_english.yml
+++ b/localisation/english/geacps_JAP_l_english.yml
@@ -282,11 +282,9 @@
  geacps_JAP.8.a:0 "公正な判決なんてもんはない"
  geacps_JAP.8.b:0 "もしかしたら..."
  
- geacps_JAP.100.t:0 "日本内戦の予感"
- geacps_JAP.100.d:0 "A"
- geacps_JAP.100.a:0 "A"
- geacps_JAP.100.b:0 "B"
- geacps_JAP.100.c:0 "C"
+ geacps_JAP.100.t:0 "武漢作戦"
+ geacps_JAP.100.d:0 "武漢作戦"
+ geacps_JAP.100.a:0 "祝武漢入城"
  
  geacps_JAP.001.title:0 "海軍を主導する人材の選定"
  geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
