--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -619,7 +619,7 @@
  STATE_618:0 "アルタイ"
  STATE_619:0 "クズルス・キルギス"
  STATE_620:0 "湖北"
- STATE_621:0 "内モンゴル"
+ STATE_621:0 "広州"
  STATE_622:0 "延安"
  STATE_623:0 "ルソン"
  STATE_624:0 "セントラル諸島"
@@ -1306,3 +1306,6 @@
  STATE_1305:0 "ダニーロフ"
  STATE_1306:0 "ハンガリー大平原南部"
  STATE_1307:0 "中央ハンガリー"
+ STATE_1308:0 "晋北"
+ STATE_1309:0 "察南"
+ STATE_1310:0 "察哈爾"
