良く分からん修正

--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -761,7 +761,7 @@
  STATE_760:0 "クムル"
  STATE_761:0 "興安東"
  STATE_762:0 "カトヴィツェ"
- STATE_763:0 "ケーニヒスベルク"
+ STATE_763:0 "カリーニングラード"
  STATE_764:0 "西バナト"
  STATE_765:0 "カタール"
  STATE_766:0 "ブジャク"
