--- a/localisation/replace/_geacps_state_names_native_l_english.yml
+++ b/localisation/replace/_geacps_state_names_native_l_english.yml
@@ -137,6 +137,8 @@ l_english:
  STATE_657_ru:0 "ウラジオストク"
  STATE_657_ch:0 "海参崴"
  
+ STATE_763_de:0 "ケーニヒスベルク"
+ 
  STATE_863_en:0 "シンガポール島"
  
  STATE_880_fr:0 "ヴァレー・ダオスト"
