--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -277,7 +277,7 @@
  STATE_276:0 "オンタリオ南部"
  STATE_277:0 "メキシコシティ"
  STATE_278:0 "パンパ"
- STATE_279:0 "サンティアゴ"
+ STATE_279:0 "中央チリ"
  STATE_280:0 "マットグロッソ"
  STATE_281:0 "モルディブ"
  STATE_282:0 "東京"
@@ -504,11 +504,11 @@
  STATE_503:0 "サンタ・カタリーナ"
  STATE_504:0 "イグアス"
  STATE_505:0 "ゴイアス"
- STATE_506:0 "アントファガスタ"
- STATE_507:0 "マガリャーネス"
+ STATE_506:0 "ノルテ・グランデ"
+ STATE_507:0 "ゾナ・アウストラル"
  STATE_508:0 "トゥクマン"
  STATE_509:0 "南方チャコ"
- STATE_510:0 "メソポタミア"
+ STATE_510:0 "中央地域"
  STATE_511:0 "メンドーサ"
  STATE_512:0 "パタゴニア"
  STATE_513:0 "トレムセン"
@@ -591,12 +591,12 @@
  STATE_590:0 "北カザフスタン"
  STATE_591:0 "海南"
  STATE_592:0 "茂名"
- STATE_593:0 "広東"
+ STATE_593:0 "韶関"
  STATE_594:0 "崇左"
  STATE_595:0 "福建"
  STATE_596:0 "浙江"
- STATE_597:0 "山東"
- STATE_598:0 "江蘇"
+ STATE_597:0 "済南"
+ STATE_598:0 "蘇中"
  STATE_599:0 "広西"
  STATE_600:0 "江西"
  STATE_601:0 "チャムド"
@@ -607,20 +607,20 @@
  STATE_606:0 "安徽"
  STATE_607:0 "河南"
  STATE_608:0 "運城"
- STATE_609:0 "東河北"
+ STATE_609:0 "冀東"
  STATE_610:0 "熱河"
  STATE_611:0 "ウランチャブ"
  STATE_612:0 "シリンゴル"
  STATE_613:0 "南京"
  STATE_614:0 "河北"
- STATE_615:0 "山西"
+ STATE_615:0 "太原"
  STATE_616:0 "寧夏"
  STATE_617:0 "アクス"
  STATE_618:0 "アルタイ"
  STATE_619:0 "クズルス・キルギス"
  STATE_620:0 "湖北"
  STATE_621:0 "広州"
- STATE_622:0 "延安"
+ STATE_622:0 "陝北"
  STATE_623:0 "ルソン"
  STATE_624:0 "セントラル諸島"
  STATE_625:0 "サマール"
@@ -891,7 +891,7 @@
  STATE_890:0 "アマザル"
  STATE_891:0 "トゥグロ"
  STATE_892:0 "シーサンパンナ"
- STATE_893:0 "呂梁"
+ STATE_893:0 "フエゴ"
  STATE_894:0 "ジョホール"
  STATE_895:0 "関東州"
  STATE_896:0 "エリー"
@@ -899,8 +899,8 @@
  STATE_898:0 "聊城"
  STATE_899:0 "済源"
  STATE_900:0 "襄陽"
- STATE_901:0 "宜春"
- STATE_902:0 "臨汾"
+ STATE_901:0 "桂林"
+ STATE_902:0 "メソポタミア"
  STATE_903:0 "スエズ運河地帯"
  STATE_904:0 "北シュレースヴィヒ"
  STATE_905:0 "クフラ"
@@ -1079,7 +1079,7 @@
  STATE_1078:0 "天門"
  STATE_1079:0 "荊門"
  STATE_1080:0 "荊州"
- STATE_1081:0 "岳陽"
+ STATE_1081:0 "威海"
  STATE_1082:0 "長沙"
  STATE_1083:0 "湘潭"
  STATE_1084:0 "株洲"
@@ -1148,25 +1148,25 @@
  STATE_1147:0 "ザカタラ"
  STATE_1148:0 "湖州"
  STATE_1149:0 "嘉興"
- STATE_1150:0 "濰坊"
- STATE_1151:0 "蘇州"
+ STATE_1150:0 "北京"
+ STATE_1151:0 "蘇南"
  STATE_1152:0 "威海衛"
  STATE_1153:0 "阜陽"
- STATE_1154:0 "亳州"
- STATE_1155:0 "淮北"
- STATE_1156:0 "滁州"
- STATE_1157:0 "宿州"
- STATE_1158:0 "南陽"
- STATE_1159:0 "信陽"
- STATE_1160:0 "九江"
- STATE_1161:0 "南昌"
- STATE_1162:0 "景徳鎮"
- STATE_1163:0 "上饒"
- STATE_1164:0 "鷹潭"
+ STATE_1154:0 "チリ南部"
+ STATE_1155:0 "ノルテ・チコ"
+ STATE_1156:0 "南陽"
+ STATE_1157:0 "寧波"
+ STATE_1158:0 "漢中"
+ STATE_1159:0 "成都"
+ STATE_1160:0 "淮海"
+ STATE_1161:0 "玉林"
+ STATE_1162:0 "武漢"
+ STATE_1163:0 "咸寧"
+ STATE_1164:0 "信陽"
  STATE_1165:0 "福州"
  STATE_1166:0 "南平"
  STATE_1167:0 "寧徳"
- STATE_1168:0 "恵州"
+ STATE_1168:0 "深圳"
  STATE_1169:0 "河源"
  STATE_1170:0 "ダマン"
  STATE_1171:0 "ディウ"
