--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -376,7 +376,7 @@
  STATE_375:0 "テキサス"
  STATE_376:0 "ニューメキシコ"
  STATE_377:0 "アリゾナ"
- STATE_378:0 "カリフォルニア"
+ STATE_378:0 "サクラメントバレー"
  STATE_379:0 "ネバダ"
  STATE_380:0 "ユタ"
  STATE_381:0 "ワイオミング"
@@ -461,7 +461,7 @@
  STATE_460:0 "コンスタンティーヌ"
  STATE_461:0 "カサブランカ"
  STATE_462:0 "マラケシュ"
- STATE_463:0 "アラスカ"
+ STATE_463:0 "南中部"
  STATE_464:0 "ノバスコシア"
  STATE_465:0 "ニューブランズウィック"
  STATE_466:0 "ケベック"
@@ -748,7 +748,7 @@
  STATE_747:0 "大理"
  STATE_748:0 "畢節"
  STATE_749:0 "黄山"
- STATE_750:0 "常徳"
+ STATE_750:0 "ノーススロープ"
  STATE_751:0 "涼山"
  STATE_752:0 "カンゼ"
  STATE_753:0 "甘南"
@@ -869,7 +869,7 @@
  STATE_868:0 "烏蘭烏拉"
  STATE_869:0 "スルハンダリヤ"
  STATE_870:0 "カシュカダリヤ"
- STATE_871:0 "オワイヒー"
+ STATE_871:0 "ベイエリア"
  STATE_872:0 "チェリャビンスク"
  STATE_873:0 "アバ"
  STATE_874:0 "湛江"
@@ -885,7 +885,7 @@
  STATE_884:0 "遵義"
  STATE_885:0 "銅仁"
  STATE_886:0 "懐化"
- STATE_887:0 "恩施"
+ STATE_887:0 "内陸部"
  STATE_888:0 "チュミカン"
  STATE_889:0 "ユダヤ"
  STATE_890:0 "アマザル"
@@ -898,7 +898,7 @@
  STATE_897:0 "南通"
  STATE_898:0 "聊城"
  STATE_899:0 "済源"
- STATE_900:0 "襄陽"
+ STATE_900:0 "シャスタ・カスケード"
  STATE_901:0 "桂林"
  STATE_902:0 "メソポタミア"
  STATE_903:0 "スエズ運河地帯"
@@ -1076,18 +1076,18 @@
  STATE_1075:0 "ヒマーチャル・プラデーシュ"
  STATE_1076:0 "アーディラーバード"
  STATE_1077:0 "ジャグダルプル"
- STATE_1078:0 "天門"
- STATE_1079:0 "荊門"
- STATE_1080:0 "荊州"
+ STATE_1078:0 "サンホアキンバレー"
+ STATE_1079:0 "シエラネバダ山脈"
+ STATE_1080:0 "南カリフォルニア"
  STATE_1081:0 "威海"
- STATE_1082:0 "長沙"
+ STATE_1082:0 "コディアック島"
  STATE_1083:0 "湘潭"
  STATE_1084:0 "株洲"
  STATE_1085:0 "郴州"
  STATE_1086:0 "衡陽"
- STATE_1087:0 "十堰"
- STATE_1088:0 "神農架林"
- STATE_1089:0 "宜昌"
+ STATE_1087:0 "南東部"
+ STATE_1088:0 "南西部"
+ STATE_1089:0 "砂漠地帯"
  STATE_1090:0 "西トーゴ"
  STATE_1091:0 "アンドラ"
  STATE_1092:0 "ウランゲリ島"
@@ -1238,7 +1238,7 @@
  STATE_1237:0 "シェパード諸島"
  STATE_1238:0 "ジュビー岬"
  STATE_1239:0 "尼港"
- STATE_1240:0 "湘西"
+ STATE_1240:0 "アリューシャン列島"
  STATE_1241:0 "ウラル"
  STATE_1242:0 "チカロフスク"
  STATE_1243:0 "アシャンティ"
@@ -1264,8 +1264,8 @@
  STATE_1263:0 "廈門"
  STATE_1264:0 "デラウェア"
  STATE_1265:0 "ノースミズーリ"
- STATE_1266:0 "クララム"
- STATE_1267:0 "オールバニ"
+ STATE_1266:0 "ノース・コースト"
+ STATE_1267:0 "セントラル・コースト"
  STATE_1268:0 "ロサンゼルス"
  STATE_1269:0 "アラウイ"
  STATE_1270:0 "ジャバル・ドゥルーズ"
