--- a/localisation/replace/_geacps_state_names_l_english.yml
+++ b/localisation/replace/_geacps_state_names_l_english.yml
@@ -593,7 +593,7 @@
  STATE_592:0 "茂名"
  STATE_593:0 "韶関"
  STATE_594:0 "崇左"
- STATE_595:0 "福建"
+ STATE_595:0 "竜岩"
  STATE_596:0 "浙江"
  STATE_597:0 "済南"
  STATE_598:0 "蘇中"
@@ -1081,10 +1081,10 @@
  STATE_1080:0 "南カリフォルニア"
  STATE_1081:0 "威海"
  STATE_1082:0 "コディアック島"
- STATE_1083:0 "湘潭"
- STATE_1084:0 "株洲"
- STATE_1085:0 "郴州"
- STATE_1086:0 "衡陽"
+ STATE_1083:0 "漳州"
+ STATE_1084:0 "温州"
+ STATE_1085:0 "三明"
+ STATE_1086:0 "泉州"
  STATE_1087:0 "南東部"
  STATE_1088:0 "南西部"
  STATE_1089:0 "砂漠地帯"
